--- a/css/main.css
+++ b/css/main.css
@@ -230,7 +230,7 @@ select {
 	border: 0;
 	outline: none;
 	vertical-align: middle;
-	color: #a3a4a6;
+	color: #2c3e50;
 	font-family: "raleway-regular", sans-serif;
 	font-size: 14px;
 	line-height: 24px;
@@ -824,10 +824,12 @@ header .logo a {
 
 /* nav-wrap */
 #nav-wrap {
+    font-family: 'Raleway', sans-serif;
 	font: 11px "raleway-heavy", sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 1.5px;
 	display: inline-block;
+    font-weight: bolder;
 }
 
 /* hide toggle button */
@@ -848,6 +850,7 @@ ul#nav li {
 	display: inline-block;
 }
 ul#nav li a {
+    font-family: 'Raleway', sans-serif;
 	display: inline-block;
 	padding: 17px 12px;
 	line-height: 38px;
@@ -868,6 +871,8 @@ ul#nav li a:active {
 ul#nav li.current a {
 	background: #f26522;
 	color: white;
+    font-weight: bold;
+    font-family: 'Raleway', sans-serif;
 }
 
 
@@ -1158,6 +1163,7 @@ hr {
 	letter-spacing: 2.5px;
 	color: #252525;
 	margin-bottom: 18px;
+    font-weight: bolder;
 }
 .section-head h1 span {
 	color: #f26522;
@@ -1703,6 +1709,7 @@ hr {
 }
 #contact h1 {
 	color: white;
+    font-weight: bolder;
 }
 
 /* contact form */
@@ -1725,9 +1732,10 @@ hr {
 	padding: 18px 20px;
 	margin-bottom: 42px;
 	font-size: 15px;
+    font-weight: bolder;
 	width: 100%;
-	background: #12151b;
-	border: 3px solid #575859;
+	background: rgba(245,245,245,0.7);
+	border: 3px solid #12151b;
 }
 #contact textarea {
 	height: 252px;
@@ -1735,8 +1743,8 @@ hr {
 #contact input:focus, 
 #contact textarea:focus, 
 #contact select:focus {
-	color: white;
-	border-color: white;
+	color: #2c3e50;
+	border-color: #f26522;
 }
 #contact button.submit {
 	text-transform: uppercase;
